--- a/Page WEB et ressources/CSS_P4.css
+++ b/Page WEB et ressources/CSS_P4.css
@@ -25,12 +25,12 @@ h1 {
 h1:hover{
 	transform:translateX(15px);
 }
-h3 {
-	color : white ;
+h2 {
+	color : #b113c2 ;
 }
 
-h3{
-	margin-left:20px;
+h2{
+	text-align:center;
 }
 .img1 {
 	transition: transform 0.3s;
@@ -44,29 +44,28 @@ h3{
 }
 
 .img2 {
+	display:inline-block;
 	transition: transform 0.3s;
-	border-radius:5px;
-	
-	margin-left:30px;
-	margin-right:30px;
+	margin-left:35%;
 }
 
 .img2:hover {
   transform: scale(1.1);
 }
 
+
 ul {
 	list-style: none;
   	display: flex;
-  	justify-content: center; 
+  	 
 }
 
 li {
-	margin-right:40px;
+	margin-left:-10px;
 }
 
 img {
-  display: flex;
+  display: inline-block;
   justify-content: center;
   align-items: center;
 }
